# blackboxai-1743379642158

./: README.md
DAW_Prototype/: .gitignore  CMakeLists.txt  LICENSE  README.md
DAW_Prototype/resources/: config.json  project.json
DAW_Prototype/src/: App.cpp  App.h  AudioEngine.cpp  AudioEngine.h  AudioUtils.cpp  AudioUtils.h  Clip.cpp  Clip.h  Commands.cpp  Commands.h  Configuration.cpp  Configuration.h  CustomLookAndFeel.cpp  CustomLookAndFeel.h  Logger.cpp  Logger.h  MIDISequencer.cpp  MIDISequencer.h  MIDIUtils.cpp  MIDIUtils.h  MainComponent.cpp  MainComponent.h  Mixer.cpp  Mixer.h  MixerComponent.cpp  MixerComponent.h  PianoRollComponent.cpp  PianoRollComponent.h  Plugin.cpp  Plugin.h  PluginManager.cpp  PluginManager.h  Project.cpp  Project.h  Track.cpp  Track.h  TrackEditorComponent.cpp  TrackEditorComponent.h  main.cpp
